<resources>
    <string name="alivc_player_settings_title">Playback Settings</string>
    <string name="alivc_operator_play">Autoplay on Provider Network</string>
    <string name="alivc_speed_one_times">Normal</string>
    <string name="alivc_speed_optf_times">1.25X</string>
    <string name="alivc_speed_opt_times">1.5X</string>
    <string name="alivc_speed_twice_times">2.0X</string>
    <string name="alivc_speed_mode">Fast Speed Play</string>
    <string name="alivc_speed_tips">the current video has switched to %1$s speed rate</string>
    <string name="alivc_left_side">Left</string>
    <string name="alivc_brightness">brightness</string>
    <string name="alivc_control">&#160;control</string>
    <string name="alivc_center">Middle</string>
    <string name="alivc_progress">progress</string>
    <string name="alivc_right_side">Right</string>
    <string name="alivc_volume">volume</string>
    <string name="input_vid_here">Please input vid here</string>
    <string name="inout_accesskeyid_here">input accesskeyId here </string>
    <string name="input_accesskeysecret_here">input accesskeySecret here</string>
    <string name="input_securitytoken_here">input securityToken here </string>
    <string name="input_url_here">Enter a URL </string>
    <string name="start_player_ui">Play Video</string>
    <string name="start_player_setting">Play by VID or URL</string>
    <string name="request_vidsts_fail">Request a vidsts failed</string>
    <string name="play_url_null_toast">Play video URL cannot be null</string>
    <string name="clear_logs">clear logs</string>
    <string name="log_prepare_success"> &#160;prepared successfully</string>
    <string name="toast_prepare_success">Prepared successfully</string>
    <string name="log_play_completion">&#160;video ended</string>
    <string name="toast_play_compleion">video ended</string>
    <string name="log_player_create_success"> &#160;create a player successfully</string>
    <string name="log_open_url_success"> &#160;open an url successfully</string>
    <string name="log_request_stream_success"> &#160;get a streaming successfully</string>
    <string name="log_start_open_stream"> &#160;start to open a streaming</string>
    <string name="log_first_frame_played"> &#160;the first frame showed</string>
    <string name="log_seek_completed">&#160;seek operation completed</string>
    <string name="log_play_stopped">&#160;play operation stopped</string>
    <string name="log_seek_start">&#160;seek operation started</string>
    <string name="log_play_pause">&#160;play operation pause</string>
    <string name="log_play_start">&#160;play operation start</string>
    <string name="log_change_quality_success">&#160;Video quality switched successfully</string>
    <string name="log_change_quality_fail">&#160;Video quality switched unsuccessfully</string>
    <string name="alivc_checkbox_all_select">All</string>
    <string name="alivc_download_edit">Edit</string>
    <string name="add_to_download">To add</string>
    <string name="no_download_right">No permission for downloading</string>
    <string name="encrypted">Encrypted</string>
    <string name="encrypted_no">Unencrypted</string>
    <string name="choose_a_definition_to_download">Please choose a definition to download</string>
    <string name="choose_downloaditem">Choose download item</string>
    <string name="choose_download_sharpness">Quality</string>
    <string name="already_downloaded">Local</string>
    <string name="download_caching">Downloading</string>
    <string name="download_prepare">preparing</string>
    <string name="download_wait">waiting</string>
    <string name="download_downloading">downloading</string>
    <string name="download_pause">pausing</string>
    <string name="download_error">error</string>
    <string name="download_no_downloaded">You haven’t downloaded the video yet</string>
    <string name="download_no_downloaded_tips">You can click the download button to add video</string>
    <string name="alivc_delete_confirm">Do you want to delete the selected video?</string>
    <string name="alivc_start_download">Download</string>
    <string name="alivc_native_video">Local Videos</string>
    <string name="alivc_download_video">download video</string>
    <string name="alivc_check_list_close">Skip Ad</string>
    <string name="alivc_adv_video_tips">Video Ad</string>
    <string name="alivc_dialog_sure">Ok</string>
    <string name="alivc_dialog_cancle">Cancel</string>
    <string name="alivc_speed">speed</string>
    <string name="alivc_video_download_finish_tips">The video is downloaded</string>
    <string name="alivc_video_downloading_tips">Downloading video. Please wait</string>
    <string name="alivc_scale">scale model</string>
    <string name="alivc_scale_aspect_fit">Scale Aspect Fit</string>
    <string name="alivc_scale_aspect_fill">Scale Apsect Fill</string>
    <string name="alivc_scale_to_fill">Scale To Fill</string>
    <string name="alivc_loop_title">Loop</string>
    <string name="alivc_loop_open">Open</string>
    <string name="alivc_loop_close">Close</string>
    <string name="alivc_sq_definition">SQ</string>
    <string name="alivc_hq_definition">HQ</string>
    <string name="alivc_fd_definition">LD</string>
    <string name="alivc_ld_definition">SD</string>
    <string name="alivc_sd_definition">HD</string>
    <string name="alivc_hd_definition">Ultra HD</string>
    <string name="alivc_k2_definition">2K (2560 * 1440)</string>
    <string name="alivc_k4_definition">4K (3840 * 2160)</string>
    <string name="alivc_od_definition">Original</string>
    <string name="alivc_mts_xld_definition">Highest</string>
    <string name="alivc_mts_ld_definition">LD</string>
    <string name="alivc_mts_sd_definition">SD</string>
    <string name="alivc_mts_fhd_definition">Ultra HD</string>
    <string name="alivc_mts_hd_definition">HD</string>
    <string name="alivc_tips_trailer">You can only watch the first 5 minutes of the video</string>
    <string name="alivc_tips_trailer_end">Sorry, the preview is over</string>
    <string name="alivc_danmaku_setting_title">Bullet Screen Settings</string>
    <string name="alivc_danmaku_setting_alpha">Opacity</string>
    <string name="alivc_danmaku_setting_speed">Bullet Speed</string>
    <string name="alivc_danmaku_setting_region">Screen Size</string>
    <string name="alivc_danmaku_setting_default">Reset</string>
    <string name="alivc_screen_cost_exit">Quit</string>
    <string name="alivc_screen_cost_back_details">Back Details</string>
    <string name="alivc_screen_cost_replay">Replay</string>
    <string name="alivc_screen_cost_chooser_device">Chooser Devices</string>
    <string name="alivc_danmaku_screen_cost_title">Attachable Device</string>
    <string name="alivc_screen_costting">Projecting...</string>
    <string name="alivc_screen_cost_scanning">Scanning...</string>
    <string name="alivc_screen_cost_device_empty">No other devices were found</string>
    <string name="alivc_danmaku_text_1">Bullet screen text. You can click the brush icon to send the text</string>
    <string name="alivc_danmaku_text_2">This video is awesome</string>
    <string name="alivc_danmaku_text_3">Hello</string>
    <string name="alivc_player_delete_failed">The path does not exist</string>
    <string name="alivc_player_redownload">The resource does not exist or it is not downloaded</string>
    <string name="alivc_player_get_sts_failed">No STS token is available</string>
    <string name="alivc_not_support_download">The specified video type cannot be downloaded...</string>
    <string name="alivc_not_support_trailer">You cannot download video previews</string>
    <string name="alivc_marquee_test">Sample Scrolling Text</string>
    <string name="alivc_danmaku_position_quarter">1/4 screen</string>
    <string name="alivc_danmaku_position_half">1/2 screen</string>
    <string name="alivc_danmaku_position_Three_fourths">3/4 screen</string>
    <string name="alivc_danmaku_position_unlimit">Full</string>
    <string name="alivc_not_choose_video">Select at least one video</string>
    <string name="alivc_btn_download">Download</string>
    <string name="alivc_btn_projection">Projection</string>
    <string name="alivc_player_device_name">Device</string>
    <string name="alivc_send">Send</string>
    <string name="alivc_player_trailer_open">Become VIP</string>
    <string name="alivc_player_trailer_play_again">Play Again</string>
    <string name="alivc_player_trailer_tips">Become VIP to watch the entire video.</string>
    <string name="alivc_player_trailer_player_tips">You can only watch the first five minutes</string>
    <string name="alivc_player_not_check_any_browser">Browser not detected</string>
    <string name="alivc_player_play_screening_fail">Screen casting failed</string>
    <string name="alivc_player_local_not_support_screencost">Local video does not support the screen projection function</string>
    <string name="alivc_player_cache_toast_4g">Connect to a WiFi or enable Download on Provider Network</string>
    <string name="alivc_player_doawload_operator">Download on Provider Network</string>
    <string name="alivc_player_audio">Audio</string>
    <string name="alivc_player_bitrate">Bitrate</string>
    <string name="alivc_player_subtitle">Subtitle</string>
    <string name="alivc_player_definition">Definition</string>
    <string name="alivc_player_cancel_subtitle">Cancel Subtitle</string>
    <string name="alivc_player_share">Share To</string>
    <string name="alivc_player_snap_shot_save_success">Picture has Saved</string>
    <string name="alivc_player_setting">Settings</string>
    <string name="alivc_player_cache_video_edit">Edit</string>
    <string name="alivc_player_download_video_delete">Delete</string>
    <string name="alivc_player_download_video_all_selected">Select All</string>
    <string name="alivc_player_download_video_un_all_selected">Clear All</string>
    <string name="alivc_player_download_video_not_cachevideo">- No cached video is found -</string>
    <string name="alivc_player_cache_video_title">Cache Videos</string>
    <string name="alivc_player_cache_ing">Downloading</string>
    <string name="alivc_player_cache_fail">Download Failure</string>
    <string name="alivc_player_cache_wait">Waitingd</string>
    <string name="alivc_player_cache_stop">Pause</string>
    <string name="alivc_player_video_cache_storage_tips">Videos Cached%s,Space Remaining%s</string>
    <string name="alivc_player_video_download_sts_and_auth_is_empty">VidSts/VidAuth is Null</string>
    <string name="alivc_player_video_stream">Video Stream</string>
    <string name="alivc_player_audio_stream">Audio Stream</string>
    <string name="alivc_player_tips_content">RTS_SERVER_MAYBE_DISCONNECT</string>
    <string name="alivc_player_tips_wait">Waiting</string>
    <string name="alivc_player_tips_exit">Exit</string>
    <string name="auto_video_scale">Autofit</string>
    <string name="auto_video_zoom">Zoom In</string>
    <string name="auto_video_tensile">Stretch</string>
    <string name="decoder_type">Decoding Mode</string>
    <string name="hard_decode">Hardware decoding</string>
    <string name="soft_decode">Software decoding</string>
    <string name="video_speed_0.5">0.5X</string>
    <string name="video_speed_0.75">0.75X</string>
    <string name="video_speed_1.0x">1.0X</string>
    <string name="video_speed_1.25x">1.25X</string>
    <string name="video_speed_1.5x">1.5X</string>
    <string name="video_speed_2.0x">2.0X</string>
    <string name="video_speed_title">Playback Speed</string>
    <string name="damkun_location">Bullet Comment Position</string>
    <string name="list_play_setting_title">Autoplay Videos in the List</string>
    <string name="background_play_setting_title">Switch to the Background for Playback</string>
    <string name="location_top">Top</string>
    <string name="location_bottom">Bottom</string>
    <string name="location_unlimit">Unlimited</string>
</resources>